Update footer year and creator details

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         </section>
         
         <footer style="text-align: center; margin-top: 50px; padding: 20px; color: #7f8c8d;">
-            <p>© 2024 Sistem Upload Foto Siswa - Dibuat dengan ❤️ untuk pendidikan</p>
+            <p>© 2025 Sistem Upload Foto Siswa - Dibuat dengan ⭐⭐⭐🎉 oleh Zizi Kayla </p>
         </footer>
     </div>
 
